--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -19,4 +19,8 @@ body {
 
 h1, h2 {
 	color: rgb(154,169,164)
+}
+
+footer {
+	float: right; 
 }
