--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,12 @@ body {
 }
 
 h1 {
-	color: rgb(154,169,164); 
-	font-family: Baskerville, serif; 
+	color: rgb(154,169,164);
+
+}
+
+img {
+	border-color: rgb(156,170,165)
 }
 
 footer {
