--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,13 @@ footer {
 }
 
 a {
-	text-decoration: none; 
+	text-decoration: none;
 }
 
 a:hover {
 	cursor: hand; 
+}
+
+h2, p {
+	color: rgb(119,124,126); 
 }
