--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
 	background: #F3EBE9;
 	font-size: 100%;
 	font-family: 'Times New Roman', serif;
+	font-weight: normal; 
 }
 
 .wrapper {
@@ -37,7 +38,7 @@ a {
 }
 
 a:hover {
-	cursor: hand; 
+	cursor: hand;
 }
 
 h2, p {
