--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 	background: #F3EBE9;
 	font-size: 100%;
 	font-family: 'Times New Roman', serif;
-	font-weight: normal; 
+	font-weight: normal;
 }
 
 .wrapper {
@@ -37,10 +37,10 @@ a {
 	text-decoration: none;
 }
 
-a:hover {
+img:hover {
 	cursor: hand;
 }
 
 h2, p {
-	color: rgb(119,124,126); 
+	color: rgb(119,124,126);
 }
