--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ body {
 h1 {
 	color: rgb(154,169,164);
 	font-size: 80px;
-	font-family: Baskerville, serif; 
+	font-family: Baskerville, serif;
+	padding: 10px; 
 
 }
 
