--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ h1 {
 	color: rgb(154,169,164);
 	font-size: 80px;
 	font-family: Baskerville, serif;
-	padding-bottom: 10px; 
+	margin-bottom: 10px; 
 
 }
 
